[check-manifest]
ignore =
          LICENSE
          Makefile
          dev-requirements.txt
          spelling_private_dict.txt
          mypy.ini
          .pydocstyle
          pylintrc
          *.mk
          .style.yapf
          requirements.txt

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[doc8]
ignore-path = ./node_modules,./src/*.egg-info/,./docs/build/spelling/output.txt,./.eggs,./src/*/_setuptools_scm_version.txt

[metadata]
name = cloud-drive-tools
description = 'Tools for managing an encrypted Google Drive fuse mount.'
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = rclone
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/cloud-drive-tools
author = Adam Dangoor
author_email = adamdangoor@gmail.com
version = 0.1

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cloud-drive-tools = cloud_drive_tools:cloud_drive_tools
