[metadata]
name = cloud-drive-tools
description = 'Tools for managing an encrypted Google Drive fuse mount.'
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = rclone
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/cloud-drive-tools
author = Adam Dangoor
author_email = adamdangoor@gmail.com
version = 0.1

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cloud-drive-tools = cloud_drive_tools:cloud_drive_tools
